# mech-interp-exploration

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup_bbq_minimal.sh  setup_mech_interp.sh  setup_mech_interp_uv.sh
.cursorrules/: 000-project-info.mdc  001-steering-info.mdc  005-extend-thinking.mdc  006-extend-thinking-experiments.mdc  008-bbq-interactive-playground.mdc  009-run-bbq-experiment.mdc  010-cot-insertion-experiment.mdc  011-internals-problems.mdc  012-cot-insertion-experiments.mdc
experiments/: config.py
experiments/001_sycophancy_exploration/: config.py  load_llama3_verify.py  logit-lens-notebook.py  logit_lens_utils.py
experiments/exp_001_logit_lens/: logit-lens-notebook.py
experiments/exp_002_distill_vs_base/: smoke_test_vendor.py  test_nnsight.py
experiments/exp_003_steering_playground/: interactive.py  steering_playground.py  steering_utils.py  test_nnsight_api.py
experiments/exp_004_hybrid_steering_model/: run_hybrid.py
experiments/exp_005_iphr_faithfulness/: iphr_experiment.py
experiments/exp_006_extend_thinking/: 01_find_think_tokens.py  02_run_experiment.py  RESULTS_README.md  analyze_results.py  analyze_results_utils.py  config.py  evaluation.py  experiment_utils.py  generation.py  merge_results.py  read_results.py  run_experiment.py  run_iphr_experiment.py  run_qwq_experiment.sh  run_with_model.py  test_extended_thinking.py
experiments/exp_006_extend_thinking/bbq/: analyze_results.py  constants.py  merge_shards.py  playground_bbq.py  setup_bbq.sh  test_minimal.py
experiments/exp_006_extend_thinking/data/: __init__.py  question_pairs.py
experiments/exp_006_extend_thinking/internals/: __init__.py  config.py  decision_point_interactive.py  logit_lens.py  quick.py
experiments/exp_006_extend_thinking/iphr/: analyze_results.py  evaluation.py  merge_results.py  run_qwen_1.5b_3.sh
experiments/exp_006_extend_thinking/shared/: config.py  generation.py
experiments/exp_007_vllm_iphr/: compare_speed.py  config.py  generator.py  sanity_check.py
(+232 files in other folders)
